test/tests/operators/load_balance/error_non_list.txt
error: expected argument of type `list`, but got `string`
 --> tests/operators/load_balance/error_non_list.tql:7:14
  |
7 | load_balance $over {
  |              ^^^^^ 
  |
